first complete version

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,19 @@
 *.out
 *.fls
 *.log
+*.bbl
+*.bcf
+*.bib.bak
+*.bib.blg
+*.blg
+*.glo
+*.hd
+*.idx
+*.ilg
+*.ind
+*.run.xml
+*.tmp
+*.cls
 
 # latex output files
 *.pdf
